--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,14 +3,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>JobEasy - Početna </title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/> <!-- Link to your CSS file -->
+  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
 </head>
 <body>
 <div class="container">
   <h1>Dobro došli na JobEasy</h1>
   <a class="button" th:href="@{/pozicije}">Lista pozicija</a>
   <a class="button" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a>
-  <a class="button" th:href="@{/prijava}">Pregled aplikanata</a><!-- Button linking to PTF -->
+  <a class="button" th:href="@{/prijava}">Pregled aplikanata</a>
+  <a class="button" th:href="@{/korisnici}">Pregled korisnika</a>
+  <a class="button" th:href="@{/korisnici/registracija}">Registracija</a>
 </div>
 </body>
 </html>
