--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -13,6 +13,7 @@
   <a class="button" th:href="@{/prijava}">Pregled aplikanata</a>
   <a class="button" th:href="@{/korisnici}">Pregled korisnika</a>
   <a class="button" th:href="@{/korisnici/registracija}">Registracija</a>
+  <a class="button" >Login</a>
 </div>
 </body>
 </html>
