JobEasy Spring Boot

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,9 +8,12 @@
 <body>
 <div class="container">
   <h1>Dobro došli na JobEasy</h1>
+  <h3>Korisnik, [Ime i Prezime]</h3>
 
-  <a class="button" >Login</a>
-  <a class="button" th:href="@{/korisnici/registracija}">Registracija</a>
+
+  <a class="button" th:href="@{/pozicije}">Lista pozicija</a>
+  <a class="button" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a>
+  <a class="button" th:href="@{/korisnici}">Pogledaj svoj profil</a>
 </div>
 </body>
 </html>
