JobEasy Spring Boot

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 
     <div class="button-group">
       <button type="submit" class="button">Login</button>
-      <a th:href="@{/register}" class="button">Registracija</a>
+      <a th:href="@{/registracija}" class="button">Registracija</a>
     </div>
   </form>
 
