JobEasy Spring Boot

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -14,6 +14,9 @@
   <a class="button" th:href="@{/pozicije}">Lista pozicija</a>
   <a class="button" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a>
   <a class="button" th:href="@{/korisnici}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">Pregled korisnika</a>
+  <a class="button" th:href="@{/prijava}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">Pregled Aplikanata</a>
+
+  <a th:href="@{/logout}" class="button">Odjava</a>
 </div>
 </body>
 </html>
