--- a/src/main/resources/templates/pozicija_list.html
+++ b/src/main/resources/templates/pozicija_list.html
@@ -13,12 +13,12 @@
       <span th:text="${pozicija.nazivPozicije}"></span>
       <div class="buttons-container">
         <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="button">Pregled</a>
-        <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" class="button">Uredi</a>
-        <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" class="button">Izbriši</a>
+        <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="button">Uredi</a>
+        <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="button">Izbriši</a>
       </div>
     </li>
     <a href="/welcome" class = "button">Nazad</a>
-    <a href="/pozicije/novapozicija" class = "button">Dodaj poziciju</a>
+    <a href="/pozicije/novapozicija" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class = "button">Dodaj poziciju</a>
   </ul>
 
 </div>
