--- a/src/main/resources/templates/pozicija_list.html
+++ b/src/main/resources/templates/pozicija_list.html
@@ -13,6 +13,7 @@
       <span th:text="${pozicija.nazivPozicije}"></span>
       <div class="buttons-container">
         <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="button">Pregled</a>
+        <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" class="button">Prijavi se</a>
         <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="button">Uredi</a>
         <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="button">Izbriši</a>
       </div>
