--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -13,11 +13,14 @@ body {
 }
 
 h1 {
-    color: #f0f0f0;
+    color: #1f63b0;
     font-size: 2.5em;
     text-align: center;
     margin: 30px 0;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+h3{
+    color: #1767c2;
 }
 
 p {
@@ -29,8 +32,8 @@ p {
 }
 
 .container {
-    width: 100%;
-    max-width: 500px;
+    width: 50%;
+    max-width: 600px;
     margin: auto;
     padding: 50px;
     border-radius: 10px;
@@ -42,7 +45,7 @@ p {
 .button {
     padding: 12px 24px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #1f63b0;
     color: white;
     border: none;
     border-radius: 6px;
@@ -52,7 +55,7 @@ p {
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #3aa8e4;
     transform: scale(1.05);
 }
 
@@ -102,7 +105,7 @@ li a {
 
 .button, li a {
     padding: 6px 12px;
-    background-color: #007bff;
+    background-color: #1f63b0;
     color: white;
     border-radius: 5px;
     text-decoration: none;
@@ -111,7 +114,7 @@ li a {
 }
 
 .button:hover, li a:hover {
-    background-color: #0056b3;
+    background-color: #3aa8e4;
 }
 
 .pozicija-naslov {
@@ -166,7 +169,7 @@ li a {
     font-weight: bold;
     margin-bottom: 5px;
     display: block;
-    color: #333;
+    color: #1f63b0;
 }
 
 .login-form input {
