--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,22 +1,53 @@
-<!-- welcome.html -->
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-  <title>JobEasy - Početna </title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
+
+    <title>JobEasy - Početna</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
+
+  <!-- Bootstrap CSS -->
+
 </head>
 <body>
-<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" th:href="@{/welcome}">Početna</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Desna strana navigacije -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/pozicije}">Lista pozicija</a>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+          <a class="nav-link" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+          <a class="nav-link" th:href="@{/korisnici}">Pregled korisnika</a>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+          <a class="nav-link" th:href="@{/prijava}">Pregled aplikanata</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" th:href="@{/logout}">Odjava</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Glavni sadržaj stranice -->
+<div class="container mt-4">
   <h1>Dobro došli na JobEasy</h1>
   <h3>Pozdrav, <span th:text="${#authentication.name}">[Korisnici]</span>!</h3>
-
-
-  <a class="button" th:href="@{/pozicije}">Lista pozicija</a>
-  <a class="button" th:href="@{/prijava/novaprijava}" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">Prijava na poziciju</a>
-  <a class="button" th:href="@{/korisnici}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">Pregled korisnika</a>
-  <a class="button" th:href="@{/prijava}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">Pregled Aplikanata</a>
-
-  <a th:href="@{/logout}" class="button">Odjava</a>
 </div>
+<!-- Bootstrap JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
