JobEasy Spring Boot

--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -204,10 +204,10 @@ li a {
 
 .error-message {
     color: red;
+    font-weight: bold;
 }
 
 .success-message {
     color: #1f63b0;
     font-weight: bold;
-
 }
