--- a/src/main/resources/templates/prijava_pregled.html
+++ b/src/main/resources/templates/prijava_pregled.html
@@ -2,40 +2,116 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>JobEasy - Pregled prijava</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/customDugme.css}"/>
 </head>
+<style>
+  .table {
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    border: none;
+    background-color: #ffffff;
+    padding: 15px;
+    margin-top: 20px;
+    transition: box-shadow 0.3s ease-in-out;
+  }
+
+  .table th,
+  .table td {
+    background: linear-gradient(to bottom, #ffffff, #f8f9fa);
+    border: none;
+  }
+
+  .table-hover tbody tr:hover {
+    background: rgba(0, 123, 255, 0.1);
+  }
+
+  .table-container {
+    margin: 0 auto;
+    max-width: 80%;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+
+</style>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" th:href="@{/welcome}">Početna</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Desna strana navigacije -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/pozicije}">Lista pozicija</a></button>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/prijava/novaprijava}">Prijava na poziciju</a></button>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/korisnici}">Pregled korisnika</a></button>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+          <button class="btn btn-light btn-sm mx-1" type="button"><a class="nav-link" th:href="@{/prijava}">Pregled aplikanata</a></button>
+
+        </li>
+        <li class="nav-item">
+          <button class="Btn">
+
+            <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
+
+            <div class="text"><a class="nav-link" style="color:white;"  th:href="@{/logout}">Odjava</a></div>
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <body>
 <div class="container">
   <h1>Prijava pregled</h1>
 
-  </a>
-  <table>
-    <thead>
-    <tr>
-      <th>ID</th>
-      <th>Ime</th>
-      <th>Prezime</th>
-      <th>Email</th>
-      <th>CV</th>
-      <th>Radnja</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="prijava : ${prijava}">
-      <td th:text="${prijava.id}"></td>
-      <td th:text="${prijava.ime}"></td>
-      <td th:text="${prijava.prezime}"></td>
-      <td th:text="${prijava.email}"></td>
-      <td th:text="${prijava.cv}"></td>
-      <td>
-        <a th:href="@{/prijava/edit/{id}(id=${prijava.id})}" class="button">Uredi</a>
-        <a th:href="@{/prijava/delete/{id}(id=${prijava.id})}" class="button">Izbriši</a>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-
-  <a href="/welcome" class="button">Nazad</a>
+  <div class="table-container">
+    <table class="table table-hover text-center">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Ime</th>
+        <th>Prezime</th>
+        <th>Email</th>
+        <th>CV</th>
+        <th>Radnja</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="prijava : ${prijava}">
+        <td th:text="${prijava.id}"></td>
+        <td th:text="${prijava.ime}"></td>
+        <td th:text="${prijava.prezime}"></td>
+        <td th:text="${prijava.email}"></td>
+        <td th:text="${prijava.cv}"></td>
+        <td>
+          <a th:href="@{/prijava/edit/{id}(id=${prijava.id})}" class="btn btn-outline-warning btn-sm">Uredi</a>
+          <a th:href="@{/prijava/delete/{id}(id=${prijava.id})}" class="btn btn-outline-danger btn-sm">Izbriši</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <!--
+  <div style="text-align: center; margin-top: 20px;">
+    <button class="btn btn-light mx-1" type="button"><a class="nav-link" th:href="@{/welcome}" style="width: 100px;">Nazad</a></button>
+  </div>
+  -->
 </div>
 </body>
 </html>
