--- a/src/main/resources/templates/korisnik_list.html
+++ b/src/main/resources/templates/korisnik_list.html
@@ -40,7 +40,7 @@
 
 
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/welcome}">Početna</a>
 
