--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,14 +6,8 @@
 
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
-
 </head>
 <style>
-  body {
-    background-color: #e9f1f7;
-    font-family: Arial, sans-serif;
-  }
-
   .container {
     max-width: 400px;
     margin: 100px auto;
@@ -26,32 +20,41 @@
   h1 {
     text-align: center;
     color: #4a90e2;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   .form-group label {
     font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+  }
+
+  .form-group {
+    margin-bottom: 20px;
   }
 
   .form-group input {
     border-radius: 5px;
+    padding: 10px;
   }
 
   .button-group {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
   }
 
   .button {
     display: inline-block;
-    padding: 10px 15px;
+    padding: 10px 20px;
     color: #fff;
     background-color: #4a90e2;
     border: none;
     border-radius: 5px;
     text-decoration: none;
     text-align: center;
+    transition: background-color 0.3s ease;
   }
 
   .button:hover {
@@ -60,21 +63,20 @@
 
   .success-message, .error-message {
     text-align: center;
-    margin-bottom: 15px;
-    padding: 10px;
+    margin-bottom: 20px;
     border-radius: 5px;
   }
 
   .success-message {
     color: #155724;
     background-color: #d4edda;
-    border: 1px solid #c3e6cb;
+
   }
 
   .error-message {
     color: #721c24;
     background-color: #f8d7da;
-    border: 1px solid #f5c6cb;
+
   }
 </style>
 <body>
@@ -82,11 +84,11 @@
   <h1>Dobrodošli na JobEasy</h1>
 
   <div th:if="${param.message}" class="success-message">
-    <p th:text="${param.message}" class="success-message"></p>
+    <b><p th:text="${param.message}" class="success-message"></p></b>
   </div>
 
-  <div class="error-message" th:if="${param.error}" >
-  <p th:text="${param.error}" class="error-message"></p>
+  <div class="error-message" th:if="${param.error}">
+    <p th:text="${param.error}" class="error-message"></p>
   </div>
 
   <!-- Login Form -->
@@ -97,18 +99,17 @@
     </div>
 
     <div class="form-group">
-      <label for="password">Korisnička lozinka:</label>
+      <label for="password">Lozinka:</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Unesite lozinku" required />
     </div>
-    <br>
+
     <div class="button-group">
-      <button type="submit" class="button">Prijava</button>
-      <a th:href="@{/registracija}" class="button">Registracija</a>
+      <button type="submit" class="btn btn-outline-primary  mx-1">Prijava</button>
+      <a th:href="@{/registracija}" class="btn btn-outline-primary  mx-1" type="button">Registracija</a>
     </div>
   </form>
 
 
-  <!-- Success Message for Logout -->
   <div th:if="${param.logout}" class="success-message">
     <p>Uspješno ste se odjavili.</p>
   </div>
